# coe322-rsamuel

./: infofile
finalproject/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  [B  cmake_install.cmake  finalproject  finalprojectmutation  infectiousdisease.cpp  infectiousdisease.hpp  infectiousdisease2.hpp  main.cpp  main2.cpp  test
hw10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw10  hw10.cpp  hw10.hpp
hw11/: CMakeLists.txt  hw11.cpp
hw12/: CMakeLists.txt  hw12.cpp
hw2/: infofile
hw3/: exercise_3.cpp  exercise_6.cpp
hw4/: 6primesbyclass.cpp
hw5/: cmakelists.txt  goldbachnew.cpp
hw6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw6  newton-lambda.cpp
hw7/: CMakeCache.txt  CMakeLists.txt  Makefile  align.cpp  cmake_install.cmake  hw7
hw8/: dynrect.cpp
hw9/: CMakeLists.txt  linkedlist.cpp  linkedlist.hpp
